--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(RayTracing)
+project(ray_tracing)
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -10,5 +10,5 @@ file(GLOB SRC_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
 
-add_executable(RayTracing ${SRC_FILES})
+add_executable(ray_tracing ${SRC_FILES})
 
